--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
-.second-section {background-color: #fff5e2;}
-
 header {
-    display: flex;
-    justify-content: space-between;
+    /* display: flex;
+    justify-content: space-between; */
+    background-color: #fdbb40;
 }
 
 header > h1 {
@@ -79,9 +78,12 @@ section > p {
 }
 
 footer {
-    padding: 30px;
+    height: 100px;
     background-color: #d33359;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     color: white;
+    font-size: 16px;
+    font-weight: bold;
 }
