--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,52 @@
+* {font-family: 'Roboto', sans-serif;}
+
+.bg-main-container {background-color: #fff5e2;} 
+
+.bg-left-container {background-color: white;}
+
 header {
-    /* display: flex;
-    justify-content: space-between; */
     background-color: #fdbb40;
+    position: relative;
+    height: 80px;
 }
 
 header > h1 {
     font-size: 30px;
-    align-self: center;
+    align-self: flex-end;
+    font-weight: bolder;
 }
 
 .burger-img-top {
-    width: 150px;
+    width: 180px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 80%;
+    left: 100%;
 }
 
-.burger-img-top > img {
-    width: 100%;
-}
+.burger-img-top > img {width: 100%;}
 
-section > p {
-    font-size: 20px;
-}
+section > p {font-size: 20px;}
 
 .name-your-burger-button::placeholder {
-    color: black;
+    color: gray;
     font-size: 22px;
 }
 
 .name-your-burger-button {
     border: 1px solid white;
     width: 100%;
-    margin-top: 15px;
+    margin-top: 36px;
 }
+
+.name-your-burger-button:focus, .name-your-burger-button > input:focus{outline: none;}
 
 .img-container {
     display: flex;
     align-items: center;
 }
 
-.img-container > span, .img-container > input, .img-container > label {
-    padding: 16px;
-}
+.img-container > span, .img-container > input, .img-container > label {padding: 16px;}
 
 .img-container > label {color: red;}
 
@@ -53,9 +60,7 @@ section > p {
     margin: 24px 0;
 }
 
-.sale-code::placeholder {
-    font-size: 14px;
-}
+.sale-code::placeholder {font-size: 14px;}
 
 .sale-code {
     border: 1px solid white;
@@ -64,9 +69,7 @@ section > p {
     width: 450px;
 }
 
-.button-calculate {
-    text-align: center;
-}
+.button-calculate {text-align: center;}
 
 .button-calculate > button {
     margin-bottom: 100px;
@@ -78,7 +81,7 @@ section > p {
 }
 
 footer {
-    height: 100px;
+    height: 80px;
     background-color: #d33359;
     display: flex;
     justify-content: space-between;
